--- a/src/app/employee/employee.component.css
+++ b/src/app/employee/employee.component.css
@@ -47,6 +47,7 @@
 }
 
 .c-card {
+	font-family: Arial,"Open Sans",sans-serif;
 	background-color: #fff;
 	border: 1px solid #ced9e1;
 	color: #262626;
@@ -1206,6 +1207,7 @@ h6 {
 .c-card__header {
 	height: 85px;
 	margin-bottom: 75px;
+	padding: .75rem;
 }
 
 .c-card__title {
